--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lodash": "^4.17.21",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.2",
-    "next": "14.2.5",
+    "next": "^14.2.6",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
